turtleart.circleying.CircleYing.scala.error
Compilation error:
CircleYing:7: error: ';' expected but integer literal found.
    k = k 1
          ^